cmss/activity-management/objects/ActivityExpirationConfig__mdt/ActivityExpirationConfig__mdt.object-meta.xml
<CustomObject>
    <description>CUSTCMSSCRM-65</description>
    <label>Activity Expiration Config</label>
    <pluralLabel>Activity Expiration Configs</pluralLabel>
</CustomObject>