cmss/activity-management/objects/ActivityExpirationConfig__mdt/fields/ClosedResult__c.field-meta.xml
<CustomField>
    <fullName>ClosedResult__c</fullName>
    <defaultValue>&apos;9&apos;</defaultValue>
    <label>Closed Result</label>
    <length>10</length>
    <type>Text</type>
</CustomField>