cmss/activity-management/objects/ActivityExpirationConfig__mdt/fields/ClosedStatus__c.field-meta.xml
<CustomField>
    <fullName>ClosedStatus__c</fullName>
    <defaultValue>&apos;4&apos;</defaultValue>
    <label>Closed Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>