cmss/activity-management/objects/ActivityExpirationConfig__mdt/fields/ExpirationDays__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDays__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Number of days after which the Activity is Expired. E.g.: 30</description>
    <label>Expiration Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>