cmss/activity-management/objects/ActivityExpirationConfig__mdt/fields/ExpiredStatus__c.field-meta.xml
<CustomField>
    <fullName>ExpiredStatus__c</fullName>
    <defaultValue>&apos;5&apos;</defaultValue>
    <description>Single status number, e.g.: 5</description>
    <label>Expired Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>