cmss/activity-management/objects/ActivityExpirationConfig__mdt/fields/FinalStatuses__c.field-meta.xml
<CustomField>
    <fullName>FinalStatuses__c</fullName>
    <defaultValue>&apos;3,4&apos;</defaultValue>
    <description>Comma separated list of status numbers, e.g.: 3,4</description>
    <label>Final Statuses</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>